services/rhesis-polyphemus/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rhesis-polyphemus
  labels:
    app.kubernetes.io/name: rhesis-polyphemus
    app.kubernetes.io/instance: rhesis-polyphemus
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: polyphemus.rhesis.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rhesis-polyphemus
                port:
                  number: 80
  tls:
    - hosts:
        - polyphemus.rhesis.example.com
      secretName: rhesis-polyphemus-tls-secret
